fixed the auth issues